Update Fly.io configuration to use development image
- Changed the Docker image in fly.toml from 'vexaai/vexa-lite:latest' to 'vexaai/vexa-lite:dev' for development purposes.

--- a/fly/fly.toml
+++ b/fly/fly.toml
@@ -7,7 +7,7 @@ app = 'vexa-lite'
 primary_region = 'sjc'
 
 [build]
-  image = 'vexaai/vexa-lite:latest'
+  image = 'vexaai/vexa-lite:dev'
 
 [env]
   DB_SSL_MODE = 'require'
