Update Fly.io configuration to use the latest Docker image
- Changed the Docker image in fly.toml from 'vexaai/vexa-lite:dev' to 'vexaai/vexa-lite:latest' for production deployment.

--- a/fly/fly.toml
+++ b/fly/fly.toml
@@ -7,7 +7,7 @@ app = 'vexa-lite'
 primary_region = 'sjc'
 
 [build]
-  image = 'vexaai/vexa-lite:dev'
+  image = 'vexaai/vexa-lite:latest'
 
 [env]
   DB_SSL_MODE = 'require'
