Implement optional frontend deployment for Vexa Dashboard
- Updated deploy.sh to support deploying the Vexa Dashboard frontend alongside the backend, with configuration for secrets and app creation.
- Added fly-dashboard.toml for frontend app configuration.
- Enhanced README.md to include instructions for enabling frontend deployment and details on accessing the dashboard.

--- a/fly/.env.example
+++ b/fly/.env.example
@@ -13,3 +13,8 @@ ADMIN_API_TOKEN=your-secure-token-here
 # Transcription Service
 # Get your API key from: https://staging.vexa.ai/dashboard/transcription
 TRANSCRIBER_API_KEY=your-transcriber-api-key-here
+
+# Frontend Dashboard (Optional)
+# Set to 'true' to deploy the Vexa Dashboard frontend alongside the backend
+# The frontend will be available at https://vexa-dashboard.fly.dev
+DEPLOY_FRONTEND=false
